Cũng ngon rồi nhưng mà thiếu quản lý quyền

--- a/templates/practice.mustache
+++ b/templates/practice.mustache
@@ -20,6 +20,14 @@
         {{#case5}}
             {{> mod_cardbox/practice_suggest_answer }}
         {{/case5}}
+
+        {{#case6}}
+            {{> mod_cardbox/practice_question_flashcard }}
+        {{/case6}}
+
+        {{#case7}}
+            {{> mod_cardbox/practice_answer_flashcard }}
+        {{/case7}}
         
     </div>
 
