--- a/templates/options.mustache
+++ b/templates/options.mustache
@@ -12,8 +12,8 @@
             <div class="item b goldenrigth">
                 <form id="cardbox-form" class="felement">
                     <input type="radio" id="cardbox-autocorrection" name="correctionmode" value="0" class="form-check-input" {{#autoenabled}}checked{{/autoenabled}} {{#autodisabled}}disabled{{/autodisabled}}> {{# str }} autocorrection, cardbox {{/ str }}<br>
-                    <input type="radio" id="cardbox-selfcorrection" name="correctionmode" value="1" class="form-check-input" {{#autodisabled}}checked{{/autodisabled}}>{{# str }} selfcorrection, cardbox {{/ str }}<br>
-                    <input type="radio" id="cardbox-flashcard" name="correctionmode" value="2" class="form-check-input">{{# str }} flashcardmode, cardbox {{/ str }}
+                    <input type="radio" id="cardbox-selfcorrection" name="correctionmode" value="1" class="form-check-input">{{# str }} selfcorrection, cardbox {{/ str }}<br>
+                    <input type="radio" id="cardbox-flashcard" name="correctionmode" value="2" class="form-check-input" checked>{{# str }} flashcardmode, cardbox {{/ str }}
                 </form>
             </div>
 
