--- a/templates/statistics.mustache
+++ b/templates/statistics.mustache
@@ -18,5 +18,5 @@
 </div>
 {{/ismanager}}
 {{#infoenrolledstudentsthreshold}}
-<div class="alert alert-info alert-block fade in" role="alert" style="margin-top: 1rem">{{{infoenrolledstudentsthreshold}}}</div>
+<div class="alert alert-info alert-block fade in" role="alert" style="margin-top: 0.8rem !important">{{{infoenrolledstudentsthreshold}}}</div>
 {{/infoenrolledstudentsthreshold}}
