--- a/templates/topic.mustache
+++ b/templates/topic.mustache
@@ -16,7 +16,7 @@
 
     {{#topic}}
 
-        <div class="col-xs-2" style="margin-bottom: 1rem">
+        <div class="col-xs-2" style="margin-bottom: 0.8rem !important">
             <div id="cardbox-topic-in-review" data-topicid="{{id}}" data-titel="{{{titel}}}">
                 <div id="cardbox-topic-{{id}}">
                     <div id="topictitel-{{id}}" style="display: inline">{{{titel}}}</div> ({{cards}} {{# str }} flashcards, cardbox {{/ str }})
