--- a/templates/options.mustache
+++ b/templates/options.mustache
@@ -11,7 +11,7 @@
             <div class="item a goldenleft">{{# str }} choosecorrectionmode, cardbox {{/ str }}</div>
             <div class="item b goldenrigth">
                 <form id="cardbox-form" class="felement">
-                    <input type="radio" id="cardbox-autocorrection" name="correctionmode" value="0" class="form-check-input" {{#autoenabled}}checked{{/autoenabled}} {{#autodisabled}}disabled{{/autodisabled}}> {{# str }} autocorrection, cardbox {{/ str }}<br>
+                    <input type="radio" id="cardbox-autocorrection" name="correctionmode" value="0" class="form-check-input"> {{# str }} autocorrection, cardbox {{/ str }}<br>
                     <input type="radio" id="cardbox-selfcorrection" name="correctionmode" value="1" class="form-check-input">{{# str }} selfcorrection, cardbox {{/ str }}<br>
                     <input type="radio" id="cardbox-flashcard" name="correctionmode" value="2" class="form-check-input" checked>{{# str }} flashcardmode, cardbox {{/ str }}
                 </form>
