--- a/templates/practice_question_flashcard.mustache
+++ b/templates/practice_question_flashcard.mustache
@@ -2,14 +2,9 @@
 
     <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
     <div id="cardbox-cardcontainer" class="col-xs-12 col-md-10 col-lg-8 col-xl-6" style="margin-bottom: 10px">
-        <button id="cardbox-end-session" type="button" class="btn btn-secondary cardbox-end-session-btn">{{# str }} endpractice, cardbox {{/ str }}</button>
+        <button id="cardbox-end-session" type="button" class="btn btn-secondary cardbox-end-session-btn">{{topic}} {{# str }} endpractice, cardbox {{/ str }}</button>
     </div>
     <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
-
-    <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
-    <div id="cardbox-cardcontainer" class="col-xs-12 col-md-10 col-lg-8 col-xl-6 topic cardbox-topic-badge">{{topic}}</div>
-    <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
-
     <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
     <div id="cardbox-flashcard-container" class="col-xs-12 col-md-10 col-lg-8 col-xl-6">
         <div class="cardbox-flashcard-card cardbox-flashcard-card-enhanced">
