--- a/templates/practice_question_flashcard.mustache
+++ b/templates/practice_question_flashcard.mustache
@@ -5,8 +5,8 @@
         <button id="cardbox-end-session" type="button" class="btn btn-secondary cardbox-end-session-btn">{{topic}} {{# str }} endpractice, cardbox {{/ str }}</button>
     </div>
     <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
-    <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
-    <div id="cardbox-flashcard-container" class="col-xs-12 col-md-10 col-lg-8 col-xl-6">
+    <div class="hidden-xs hidden-md col-lg-2 col-xl-3"></div>
+    <div id="cardbox-flashcard-container" class="col-xs-12 col-md-12 col-lg-8 col-xl-6">
         <div class="cardbox-flashcard-card cardbox-flashcard-card-enhanced">
             <div class="cardbox-flashcard-header">
                 {{#deck}}
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
+    <div class="hidden-xs hidden-md col-lg-2 col-xl-3"></div>
 
 </div>
 
