--- a/templates/practice_question_multiplechoice.mustache
+++ b/templates/practice_question_multiplechoice.mustache
@@ -5,8 +5,8 @@
         <button id="cardbox-end-session" type="button" class="btn btn-secondary">{{topic}} {{# str }} endpractice, cardbox {{/ str }}</button>
     </div>
     <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
-    <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
-    <div id="cardbox-cardcontainer-question" class="col-xs-12 col-md-10 col-lg-8 col-xl-6">
+    <div class="hidden-xs hidden-md col-lg-2 col-xl-3"></div>
+    <div id="cardbox-cardcontainer-question" class="col-xs-12 col-md-12 col-lg-8 col-xl-6">
         {{#question}}
             {{> mod_cardbox/cardside }}
         {{/question}}
@@ -14,7 +14,7 @@
             <img src={{deckimgurl}} alt="This card belongs to Deck {{deck}}" class="cardbox_card_deck_icon">
         {{/deck}}
     </div>
-   <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
+   <div class="hidden-xs hidden-md col-lg-2 col-xl-3"></div>
 
 </div>
 
