--- a/templates/practice_question_selfcheck.mustache
+++ b/templates/practice_question_selfcheck.mustache
@@ -5,8 +5,8 @@
         <p>{{topic}}</p><button id="cardbox-end-session" type="button" class="btn btn-secondary">{{topic}} {{# str }} endpractice, cardbox {{/ str }}</button>
     </div>
     <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
-    <div class="hidden-xs col-md-1 col-lg-2 col-xl-3"></div>
-    <div id="cardbox-cardcontainer-question" class="col-xs-12 col-md-10 col-lg-8 col-xl-6 cardbox-selfcheck-question-side">
+    <div class="hidden-xs hidden-md col-lg-2 col-xl-3"></div>
+    <div id="cardbox-cardcontainer-question" class="col-xs-12 col-md-12 col-lg-8 col-xl-6 cardbox-selfcheck-question-side">
             {{#question}}
                 {{> mod_cardbox/cardside }}
             {{/question}}
@@ -16,7 +16,7 @@
         <div id="icon-progress" style="float: right">{{icon}}</div>
             
     </div>
-    <div class="hidden-xs col-md-1 col-lg-2 col-xl-3">
+    <div class="hidden-xs hidden-md col-lg-2 col-xl-3">
     <!--<button id="cardbox-see-options" type="button" class="btn btn-primary" data-toggle="modal" data-target="#cardboxPracticeSettings">{{# str }} options, cardbox {{/ str }}</button>-->
     </div>
 
