--- a/templates/options.mustache
+++ b/templates/options.mustache
@@ -38,8 +38,8 @@
             <div id="cardbox-practiceall-select" class="item g goldenleft">{{# str }} practiceall, cardbox {{/ str }}&nbsp; {{{helpbuttonpracticeall}}}</div>
             <div id="cardbox-practiceall-choices" class="item h goldenrigth">
                 <form id="cardbox-form-practiceall" class="felement">
-                    <input type="radio" id="cardbox-practiceall-yes" name="practiceall" value="0" class="form-check-input"> {{# str }} yes, cardbox {{/ str }}<br>
-                    <input type="radio" id="cardbox-practiceall-no" name="practiceall" value="1" class="form-check-input" checked>{{# str }} no, cardbox {{/ str }}
+                    <input type="radio" id="cardbox-practiceall-yes" name="practiceall" value="0" class="form-check-input" checked> {{# str }} yes, cardbox {{/ str }}<br>
+                    <input type="radio" id="cardbox-practiceall-no" name="practiceall" value="1" class="form-check-input" >{{# str }} no, cardbox {{/ str }}
                 </form>
 
             </div>
