--- a/templates/practice_question_flashcard.mustache
+++ b/templates/practice_question_flashcard.mustache
@@ -57,6 +57,9 @@
         
         <!-- Next button (hidden initially) -->
         <div id="cardbox-flashcard-next-container" class="cardbox-flashcard-next-container hidden">
+            <button id="cardbox-flashcard-previous-btn" type="button" class="btn btn-secondary cardbox-flashcard-previous-btn">
+                {{# str }} previous, cardbox {{/ str }}
+            </button>
             <button id="cardbox-flashcard-next-btn" type="button" class="btn btn-primary cardbox-flashcard-next-btn">
                 {{# str }} continue, cardbox {{/ str }}
             </button>
